--- a/ProyectLauncher/Views/MainWindow.axaml
+++ b/ProyectLauncher/Views/MainWindow.axaml
@@ -7,5 +7,5 @@
         x:Class="ProyectLauncher.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
         Title="ProyectLauncher">
-        <views:MainView />
+        <views:MainView Name="Control"/>
 </Window>
