--- a/ProyectLauncher/Views/Installer/AddVersion.axaml
+++ b/ProyectLauncher/Views/Installer/AddVersion.axaml
@@ -2,8 +2,24 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        mc:Ignorable="d" d:DesignWidth="400" d:DesignHeight="505"
+        Width="400" Height="505"
+        ExtendClientAreaToDecorationsHint="True"
+        WindowStartupLocation="CenterOwner"
+        CanResize="False"
+        ShowInTaskbar="False"
         x:Class="ProyectLauncher.Views.Installer.AddVersion"
         Title="Nueva Version">
+  
+  <StackPanel Margin="30">
+  <TextBlock HorizontalAlignment="Center" FontSize="20" FontWeight="Bold">Selecciona una version a Instalar</TextBlock>
+  <RelativePanel Width="300" Height="350" Margin="20">
+    <TextBlock x:Name="LblSnapShots" Padding="8">Snapshots</TextBlock>
+    <CheckBox x:Name="SnapshotsCheck" RelativePanel.RightOf="LblSnapShots"/>
 
+    <ListBox x:Name="ListVersion" RelativePanel.Below="SnapshotsCheck" RelativePanel.AlignLeftWithPanel="True" RelativePanel.AlignRightWithPanel="True"/>
+  </RelativePanel>
+    <Button x:Name="InstallBt" HorizontalAlignment="Center"  Width="310" Height="35" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Click="InstallVersion">Instalar Version</Button>
+  </StackPanel> 
+  
 </Window>
