--- a/ProyectLauncher/Views/MainWindow.axaml
+++ b/ProyectLauncher/Views/MainWindow.axaml
@@ -4,6 +4,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:views="clr-namespace:ProyectLauncher.Views"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        Width="800" Height="450" WindowStartupLocation="CenterScreen"
         x:Class="ProyectLauncher.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
         Title="ProyectLauncher">
